discussion/kv_engine/186886/186886_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54810: TimingsTest for values > max tracked

Change-Id: I8ec46eff15304b16f7fe4ed2d0170c87afb945e9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-02-17 16:55:11.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-17 16:55:27.000000000
Message: 
Patch Set 3: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/338647/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-17 17:49:34.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1198/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1198/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1207/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:40:24: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    auto json = histo->to_json();
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1207/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:40:24:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1207/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1450/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1167/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22821/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1236/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1234/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1232/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1226/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1565/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1225/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
